--- a/src/main/resources/com/example/cursova/Login_window.fxml
+++ b/src/main/resources/com/example/cursova/Login_window.fxml
@@ -7,40 +7,48 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="750.0" style="-fx-background-color: BFD8AF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Controller_for_login">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1550.0" style="-fx-background-color: BFD8AF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Controller_for_login">
    <children>
-      <AnchorPane layoutY="100.0" prefHeight="400.0" prefWidth="750.0" style="-fx-background-color: white;">
+      <AnchorPane layoutX="-1.0" layoutY="146.0" prefHeight="644.0" prefWidth="1550.0" style="-fx-background-color: white;">
          <children>
-            <Label layoutX="276.0" layoutY="53.0" text="Авторизація" textFill="#50623a">
-               <font>
-                  <Font name="Comic Sans MS" size="34.0" />
-               </font>
-            </Label>
-            <TextField fx:id="Field_login" layoutX="279.0" layoutY="137.0" prefHeight="38.0" prefWidth="198.0" promptText="Введіть логін">
-               <font>
-                  <Font name="Comic Sans MS" size="18.0" />
-               </font>
-            </TextField>
-            <Button fx:id="Login_button" layoutX="408.0" layoutY="282.0" mnemonicParsing="false" text="Увійти" textFill="#294b29">
-               <font>
-                  <Font name="Comic Sans MS" size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="Registration_button" layoutX="586.0" layoutY="335.0" mnemonicParsing="false" text="Зареєструватися" textFill="#294b29">
-               <font>
-                  <Font name="Comic Sans MS" size="15.0" />
-               </font>
-            </Button>
-            <PasswordField fx:id="Field_password" layoutX="279.0" layoutY="207.0" prefHeight="26.0" prefWidth="198.0" promptText="Введіть пароль">
-               <font>
-                  <Font name="Comic Sans MS" size="18.0" />
-               </font>
-            </PasswordField>
+            <AnchorPane layoutX="568.0" layoutY="83.0" prefHeight="478.0" prefWidth="410.0" style="-fx-background-color: BFD8AF; -fx-background-radius: 25;">
+               <children>
+                  <AnchorPane layoutX="45.0" layoutY="45.0" prefHeight="364.0" prefWidth="320.0" style="-fx-background-color: white; -fx-background-radius: 25;">
+                     <children>
+                        <Label layoutX="38.0" layoutY="30.0" text="Авторизація" textFill="#50623a">
+                           <font>
+                              <Font name="Comic Sans MS" size="42.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="Field_login" layoutX="44.0" layoutY="123.0" prefHeight="46.0" prefWidth="232.0" promptText="Введіть логін">
+                           <font>
+                              <Font name="Comic Sans MS" size="22.0" />
+                           </font>
+                        </TextField>
+                        <Button fx:id="Login_button" layoutX="104.0" layoutY="290.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="111.0" text="Увійти" textFill="#294b29">
+                           <font>
+                              <Font name="Comic Sans MS" size="19.0" />
+                           </font>
+                        </Button>
+                        <PasswordField fx:id="Field_password" layoutX="44.0" layoutY="204.0" prefHeight="46.0" prefWidth="232.0" promptText="Введіть пароль">
+                           <font>
+                              <Font name="Comic Sans MS" size="22.0" />
+                           </font>
+                        </PasswordField>
+                     </children>
+                  </AnchorPane>
+                  <Button fx:id="Registration_button" layoutX="112.0" layoutY="423.0" mnemonicParsing="false" text="Зареєструватися" textFill="#294b29">
+                     <font>
+                        <Font name="Comic Sans MS" size="20.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
-      <Label layoutX="153.0" layoutY="14.0" text="Довідник туриста" textAlignment="CENTER" textFill="#294b29">
+      <Label layoutX="439.0" layoutY="14.0" text="Довідник туриста" textAlignment="CENTER" textFill="#294b29">
          <font>
-            <Font name="Comic Sans MS" size="53.0" />
+            <Font name="Comic Sans MS" size="80.0" />
          </font>
       </Label>
    </children>
