--- a/src/main/resources/com/example/cursova/Registration_window.fxml
+++ b/src/main/resources/com/example/cursova/Registration_window.fxml
@@ -7,50 +7,58 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="750.0" style="-fx-background-color: BFD8AF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Controller_for_registration">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1550.0" style="-fx-background-color: BFD8AF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Controller_for_registration">
     <children>
-        <AnchorPane layoutY="100.0" prefHeight="400.0" prefWidth="750.0" style="-fx-background-color: white;">
+        <AnchorPane layoutY="146.0" prefHeight="644.0" prefWidth="1550.0" style="-fx-background-color: white;">
             <children>
-                <Label layoutX="289.0" layoutY="42.0" text="Реєстрація" textFill="#50623a">
-                    <font>
-                        <Font name="Comic Sans MS" size="34.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="Registration_name" layoutX="118.0" layoutY="124.0" prefHeight="38.0" prefWidth="198.0" promptText="Введіть ім'я">
-                    <font>
-                        <Font name="Comic Sans MS" size="18.0" />
-                    </font>
-                </TextField>
-                <Button fx:id="Registration_button" layoutX="305.0" layoutY="286.0" mnemonicParsing="false" text="Зареєструватись" textFill="#294b29">
-                    <font>
-                        <Font name="Comic Sans MS" size="15.0" />
-                    </font>
-                </Button>
-                <Button fx:id="Return_button" layoutX="602.0" layoutY="335.0" mnemonicParsing="false" text="Повернутись" textFill="#294b29">
-                    <font>
-                        <Font name="Comic Sans MS" size="15.0" />
-                    </font>
-                </Button>
-                <PasswordField fx:id="Registration_password" layoutX="440.0" layoutY="208.0" prefHeight="26.0" prefWidth="198.0" promptText="Створіть пароль">
-                    <font>
-                        <Font name="Comic Sans MS" size="18.0" />
-                    </font>
-                </PasswordField>
-            <TextField fx:id="Registration_login" layoutX="118.0" layoutY="208.0" prefHeight="38.0" prefWidth="198.0" promptText="Створіть логін">
-               <font>
-                  <Font name="Comic Sans MS" size="18.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="Registration_surname" layoutX="440.0" layoutY="124.0" prefHeight="38.0" prefWidth="198.0" promptText="Введіть прізвище">
-               <font>
-                  <Font name="Comic Sans MS" size="18.0" />
-               </font>
-            </TextField>
+            <AnchorPane layoutX="426.0" layoutY="69.0" prefHeight="496.0" prefWidth="698.0" style="-fx-background-color: BFD8AF; -fx-background-radius: 25;">
+               <children>
+                  <AnchorPane layoutX="47.0" layoutY="50.0" prefHeight="378.0" prefWidth="604.0" style="-fx-background-color: white; -fx-background-radius: 25;">
+                     <children>
+                            <Button fx:id="Registration_button" layoutX="210.0" layoutY="303.0" mnemonicParsing="false" text="Зареєструватись" textFill="#294b29">
+                                <font>
+                                    <Font name="Comic Sans MS" size="20.0" />
+                                </font>
+                            </Button>
+                        <TextField fx:id="Registration_login" layoutX="38.0" layoutY="207.0" prefHeight="46.0" prefWidth="230.0" promptText="Створіть логін">
+                           <font>
+                              <Font name="Comic Sans MS" size="22.0" />
+                           </font>
+                        </TextField>
+                            <PasswordField fx:id="Registration_password" layoutX="342.0" layoutY="207.0" prefHeight="46.0" prefWidth="230.0" promptText="Створіть пароль">
+                                <font>
+                                    <Font name="Comic Sans MS" size="22.0" />
+                                </font>
+                            </PasswordField>
+                            <TextField fx:id="Registration_name" layoutX="342.0" layoutY="115.0" prefHeight="46.0" prefWidth="229.0" promptText="Введіть ім'я">
+                                <font>
+                                    <Font name="Comic Sans MS" size="22.0" />
+                                </font>
+                            </TextField>
+                        <TextField fx:id="Registration_surname" layoutX="38.0" layoutY="115.0" prefHeight="46.0" prefWidth="230.0" promptText="Введіть прізвище">
+                           <font>
+                              <Font name="Comic Sans MS" size="22.0" />
+                           </font>
+                        </TextField>
+                            <Label layoutX="189.0" layoutY="28.0" text="Реєстрація" textFill="#50623a">
+                                <font>
+                                    <Font name="Comic Sans MS" size="45.0" />
+                                </font>
+                            </Label>
+                     </children>
+                  </AnchorPane>
+                      <Button fx:id="Return_button" layoutX="503.0" layoutY="441.0" mnemonicParsing="false" text="Повернутись" textFill="#294b29">
+                          <font>
+                              <Font name="Comic Sans MS" size="20.0" />
+                          </font>
+                      </Button>
+               </children>
+            </AnchorPane>
             </children>
         </AnchorPane>
-        <Label layoutX="153.0" layoutY="14.0" text="Довідник туриста" textAlignment="CENTER" textFill="#294b29">
+        <Label layoutX="439.0" layoutY="14.0" text="Довідник туриста" textAlignment="CENTER" textFill="#294b29">
             <font>
-                <Font name="Comic Sans MS" size="53.0" />
+                <Font name="Comic Sans MS" size="80.0" />
             </font>
         </Label>
     </children>
