--- a/src/main/resources/com/example/cursova/Synevyr.fxml
+++ b/src/main/resources/com/example/cursova/Synevyr.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
@@ -44,7 +45,7 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Text layoutX="26.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Якщо хочете зазирнути в душу України,то варто вирушати у Карпати, Міжгірський район Закарпатської області, в гірський масив Внутрішні Ґорґани. Саме там на вас чекатиме озеро Синевир. Його кришталеві води якнайкраще відображають чистоту української душі, а теплота води точно не для кожного.Легендарне озеро знаходиться на висоті 989 метрів над рівнем моря і утворене внаслідок потужного землетрусу, що спричинив зсув. Так більше 10 тисяч років тому утворилась улоговина, що наповнилась водою з трьох гірських струмків. Завдяки чистоті води можна побачити як в озері плаває форель і здається, що дно так близько. Але нехай це не вводить вас в оману, бо глибина складає 8-10 метрів, а в максимальній точці досягає 24.&#10;&#10;Відвідування території озера Синевир Для дорослих – 60 грн, для дітей та студентів – 30 грн" wrappingWidth="445.39630126953125">
+                              <Text layoutX="25.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Якщо хочете зазирнути в душу України,то варто вирушати у Карпати, Міжгірський район Закарпатської області, в гірський масив Внутрішні Ґорґани. Саме там на вас чекатиме озеро Синевир. Легендарне озеро знаходиться на висоті 989 метрів над рівнем моря і утворене внаслідок потужного землетрусу, що спричинив зсув. Так більше 10 тисяч років тому утворилась улоговина, що наповнилась водою з трьох гірських струмків. &#10;&#10;Відвідування території озера Синевир для дорослих – 60 грн, для дітей та студентів – 30 грн. Для транспорту:&#10;з мотоцикла — 30 грн;&#10;з атомобіля — 75 грн;&#10;з мікроавтобуса (менше/більше 8 осіб) — 120/165 грн." wrappingWidth="445.39630126953125">
                                  <font>
                                     <Font name="Comic Sans MS" size="18.0" />
                                  </font>
@@ -57,12 +58,12 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <ImageView fitHeight="327.0" fitWidth="434.0" layoutX="466.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="299.0" fitWidth="456.0" layoutX="444.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../../img/Синевир_1.jpg" />
                                  </image>
                               </ImageView>
-                              <Text layoutX="40.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Озеро Синевир ще називають &quot;Морське Око&quot;, бо посередині є острівець, схожий на зіницю ока.&#10;2. Озеро є найбільшим в Україні, що розташоване в горах.&#10;3. Виникло понад 10 тисяч років тому.&#10;4. Має площу 4-5 гектарів, змінюється протягом року.&#10;5. У озері водиться райдужна та струмкова форель, раки." wrappingWidth="381.60007324218765">
+                              <Text layoutX="28.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Озеро Синевир ще називають &quot;Морське Око&quot;, бо посередині є острівець, схожий на зіницю ока.&#10;2. Озеро є найбільшим в Україні, що розташоване в горах.&#10;3. Виникло понад 10 тисяч років тому.&#10;4. Має площу 4-5 гектарів, змінюється протягом року.&#10;5. У озері водиться райдужна та струмкова форель, раки." wrappingWidth="381.60007324218765">
                                  <font>
                                     <Font name="Comic Sans MS" size="18.0" />
                                  </font>
@@ -85,10 +86,15 @@
             </Text>
          </children>
       </AnchorPane>
-      <Label layoutX="579.0" layoutY="8.0" text="Озеро Синевир" textFill="#294b29">
+      <Label layoutX="558.0" text="Озеро Синевир" textFill="#294b29">
          <font>
             <Font name="Comic Sans MS" size="60.0" />
          </font>
       </Label>
+      <Button fx:id="Btn_return" layoutX="37.0" layoutY="23.0" mnemonicParsing="false" text="Повернутись">
+         <font>
+            <Font name="Comic Sans MS" size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
