Added admin panel for Synevyr

--- a/src/main/resources/com/example/cursova/Daffodils.fxml
+++ b/src/main/resources/com/example/cursova/Daffodils.fxml
@@ -18,7 +18,7 @@
             <children>
                 <ImageView fitHeight="327.0" fitWidth="490.0" layoutX="39.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../img/Долина%20нарцисів.jpg" />
+                        <Image url="@img/Долина%20нарцисів.jpg" />
                     </image>
                 </ImageView>
                 <TabPane layoutX="588.0" prefHeight="700.0" prefWidth="962.0" tabClosingPolicy="UNAVAILABLE">
@@ -29,7 +29,7 @@
                                     <children>
                                         <ImageView fitHeight="407.0" fitWidth="492.0" layoutX="25.0" layoutY="290.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Долина%20нарцисів_1.jpg" />
+                                                <Image url="@img/Долина%20нарцисів_1.jpg" />
                                             </image>
                                         </ImageView>
                                         <Text layoutX="25.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="За легендою, колись у сиву прадавнину у Хусті в замку жили князь, княгиня та їхня красуня-донька Руся. На околиці міста проводив життя гончар Іванко. На день Русиного повноліття до замку прийшло багато сановитих візитерів та городян з дорогими гостинцями. Іванкові кортіло теж зробити подарунок — це була дивна ваза, на якій, наче живі, мерехтіли квіти граціозного білого нарциса. У цю мить Іванко та Руся закохались одне в одного. Після того вони стали крадькома зустрічатися у мальовничій долині. Та одного разу князь довідався і так ошаленів, що схопив Іванкову вазу і жбурнув з княжої гори. Ваза розбилася об скелину та розсипалась по долині дрібним дощем. Коли зійшло сонце, то всі побачили, що придолинок вкритий біло-зеленим нарцисовим килимом. Нарциси символізують вічну любов і вірність, яку дівчина відчувала до свого коханого, і перетворюються на квіти, що вічно ростуть у долині." wrappingWidth="911.7367706298828">
@@ -39,7 +39,7 @@
                                         </Text>
                                         <ImageView fitHeight="284.0" fitWidth="386.0" layoutX="556.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Долина%20нарцисів_2.jpg" />
+                                                <Image url="@img/Долина%20нарцисів_2.jpg" />
                                             </image>
                                         </ImageView>
                                     </children>
@@ -65,7 +65,7 @@
                                     <children>
                                         <ImageView fitHeight="338.0" fitWidth="468.0" layoutX="449.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Долина%20нарцисів_3.jpg" />
+                                                <Image url="@img/Долина%20нарцисів_3.jpg" />
                                             </image>
                                         </ImageView>
                                         <Text layoutX="28.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Долина нарцисів – це унікальний природний об'єкт, на території якого під охороною перебувають 498 видів рослин, 16 видів орхідей, 24 види метеликів і 104 види птахів.&#10;2. Поблизу долини функціонує &quot;Музей нарцису&quot;, який дбайливо зберігає інформацію про флору і фауну Долини нарцисів.&#10;3. Долина нарцисів входить до міжнародної мережі біосферних резерватів ЮНЕСКО.&#10;4. Долина нарцисів є унікальним об’єктом, це найбільший за площею осередок цвітіння нарцису вузьколистого на території Східної Європи." wrappingWidth="408.0001586914064">
