--- a/src/main/resources/com/example/cursova/Deer.fxml
+++ b/src/main/resources/com/example/cursova/Deer.fxml
@@ -18,7 +18,7 @@
             <children>
                 <ImageView fitHeight="327.0" fitWidth="490.0" layoutX="39.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../img/Оленяча%20ферма.jpg" />
+                        <Image url="@img/Оленяча%20ферма.jpg" />
                     </image>
                 </ImageView>
                 <TabPane layoutX="588.0" prefHeight="700.0" prefWidth="962.0" tabClosingPolicy="UNAVAILABLE">
@@ -29,7 +29,7 @@
                                     <children>
                                         <ImageView fitHeight="407.0" fitWidth="492.0" layoutX="35.0" layoutY="327.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Оленяча%20ферма_1.jpg" />
+                                                <Image url="@img/Оленяча%20ферма_1.jpg" />
                                             </image>
                                         </ImageView>
                                         <Text layoutX="25.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Історія заснування оленячої ферми датується 1980-ми роками й бере свій початок з далеких земель Приморського краю — території, що є історичною батьківщиною плямистих оленів. Завезли струнконогих красенів до Закарпаття, а точніше — в селище Іза, у спеціально облаштованому фургоні, тоді їх нараховувалось близько 30 осіб. На сьогоднішній день оленяча ферма в місті Хуст налічує зо дві сотні рогатих. Завозили їх з метою отримання лікарських препаратів, активна речовина яких видобувається з ріг парнокопитних. Мова йде про лікарську речовину пантокрин. Застосовується вона в препаратах, що широко використовуються у періоди перевтоми, астенічних станів, анемії, при зниженні імунітету, низькому артеріальному тиску, гіпотонії. Загальнотонізуючі властивості препарату користувались чималим попитом й збагачували ферму з року в рік. Згодом оленяча ферма була на порозі закриття, та все ж цього не сталось. У 2003 році господарство викупив приватний підприємець, який подарував йому нове життя." wrappingWidth="911.7367706298828">
@@ -39,7 +39,7 @@
                                         </Text>
                               <ImageView fitHeight="397.0" fitWidth="329.0" layoutX="555.0" layoutY="290.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../img/Оленяча%20ферма_2.jpeg" />
+                                    <Image url="@img/Оленяча%20ферма_2.jpeg" />
                                  </image>
                               </ImageView>
                                     </children>
@@ -65,7 +65,7 @@
                                     <children>
                                         <ImageView fitHeight="338.0" fitWidth="468.0" layoutX="449.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Оленяча%20ферма_3.jpg" />
+                                                <Image url="@img/Оленяча%20ферма_3.jpg" />
                                             </image>
                                         </ImageView>
                                         <Text layoutX="28.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. На території ферми є п’ять озер, то ж коли спека, у літній період, олені занурюються по шию у воду.&#10;2. Морози оленям не страшні, це північні тварини, сплять просто в снігу.&#10;3. Історична батьківщина оленів  – далека Маньчжурія.&#10;4. На фермі олені не мають природних хижаків, тому живуть 17-18 років, тоді як у дикій природі тільки 12.&#10;5. Ферма оленів у селі Іза, входить до переліку унікальних ферм Закарпаття." wrappingWidth="408.0001586914064">
