--- a/src/main/resources/com/example/cursova/Home_page.fxml
+++ b/src/main/resources/com/example/cursova/Home_page.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.image.Image?>
@@ -12,12 +13,12 @@
       <AnchorPane layoutX="-1.0" layoutY="90.0" prefHeight="700.0" prefWidth="1550.0" style="-fx-background-color: white;">
          <children>
             <ImageView fx:id="img_lake" fitHeight="310.0" fitWidth="450.0" layoutX="50.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../img/Синевир.jpg" />
-               </image>
                <effect>
                   <BoxBlur />
                </effect>
+               <image>
+                  <Image url="@../../../img/Синевир.jpg" />
+               </image>
             </ImageView>
             <ImageView fx:id="img_deer" fitHeight="308.0" fitWidth="450.0" layoutX="550.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                <image>
@@ -96,5 +97,10 @@
             <Font name="Comic Sans MS" size="60.0" />
          </font>
       </Label>
+      <Button fx:id="Btn_return" layoutX="44.0" layoutY="23.0" mnemonicParsing="false" text="Повернутись">
+         <font>
+            <Font name="Comic Sans MS" size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
