--- a/src/main/resources/com/example/cursova/Ostriches.fxml
+++ b/src/main/resources/com/example/cursova/Ostriches.fxml
@@ -18,7 +18,7 @@
             <children>
                 <ImageView fitHeight="327.0" fitWidth="490.0" layoutX="39.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../img/Страусина%20ферма.jpg" />
+                        <Image url="@img/Страусина%20ферма.jpg" />
                     </image>
                 </ImageView>
                 <TabPane layoutX="588.0" prefHeight="700.0" prefWidth="962.0" tabClosingPolicy="UNAVAILABLE">
@@ -29,7 +29,7 @@
                                     <children>
                                         <ImageView fitHeight="407.0" fitWidth="492.0" layoutX="35.0" layoutY="327.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Страусина%20ферма_1.jpg" />
+                                                <Image url="@img/Страусина%20ферма_1.jpg" />
                                             </image>
                                         </ImageView>
                                         <Text layoutX="25.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="У 2002 році незвичну ферму заснував Василь Перець. Складнощі почалися уже при ввезені птахів, адже, як пояснює пан Василь, на той час страуси як домашня птиця у законодавстві не вказувалися. Три доби тварин тримали на кордоні, внаслідок чого одна птаха загинула.Після того як екзотичних мешканців пропустили пригоди не закінчилися. Власник розповідає, що потрібно було із загиблої особини надати частини тіла на експертизу: перевірити чи не завезли якусь хворобу. Але, на щастя, все обійшлося. Перших страусів він привіз зі Словаччини та одразу помітив, що їм підходить місцевий клімат. Птахи почали розмножуватися, тому зараз на території у відкритих загонах живе близько 35 птахів двох видів — африканський страус та австралійський ему.Спочатку ферма планувалася як місце для розмноження страусів для подальшого продажу. Але сюди почали приїжджати туристи для тісного спілкування з найбільшими птахами у світі. Тому відвідування ферми швидко перетворилося на еко-туризм." wrappingWidth="911.7367706298828">
@@ -39,7 +39,7 @@
                                         </Text>
                                         <ImageView fitHeight="397.0" fitWidth="329.0" layoutX="563.0" layoutY="295.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Страусина%20ферма_3.jpeg" />
+                                                <Image url="@img/Страусина%20ферма_3.jpeg" />
                                             </image>
                                         </ImageView>
                                     </children>
@@ -65,7 +65,7 @@
                                     <children>
                                         <ImageView fitHeight="338.0" fitWidth="468.0" layoutX="449.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Страусина%20ферма_3.jpg" />
+                                                <Image url="@img/Страусина%20ферма_3.jpg" />
                                             </image>
                                         </ImageView>
                                         <Text layoutX="28.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Сьогодні на території ферми проживає близько 26 птахів.&#10;2. Можна придбати яйце страуса або перо на згадку про цю подорож.&#10;3. Ферма розташована на чотирьох гектарах землі, з яких гектар – суто для страусів. На інших частинах вирощують люцерну, яку дуже полюбляють птахи.&#10;4. Страуси їдять все, що можуть проковтнути(одного разу це був телефон відвідувача).&#10;5. При ударі страуса на один сантиметр тіла людини припадає сила в 50 кг, тому заходити до них у вольєр забороняють." wrappingWidth="408.0001586914064">
