--- a/src/main/resources/com/example/cursova/Palace.fxml
+++ b/src/main/resources/com/example/cursova/Palace.fxml
@@ -18,7 +18,7 @@
             <children>
                 <ImageView fitHeight="327.0" fitWidth="490.0" layoutX="39.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../img/Палац%20шенборнів.jpg" />
+                        <Image url="@img/Палац%20шенборнів.jpg" />
                     </image>
                 </ImageView>
                 <TabPane layoutX="588.0" prefHeight="700.0" prefWidth="962.0" tabClosingPolicy="UNAVAILABLE">
@@ -29,7 +29,7 @@
                                     <children>
                                         <ImageView fitHeight="407.0" fitWidth="492.0" layoutX="36.0" layoutY="301.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Палац%20шенборнів_1.jpeg" />
+                                                <Image url="@img/Палац%20шенборнів_1.jpeg" />
                                             </image>
                                         </ImageView>
                                         <Text layoutX="25.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Легенда про замок розповідає про неймовірну ревність одного із Шенборнів до своєї дружини. Граф захоплювався полюванням, але думки про зраду коханої під час його відсутності не давали чоловікові спокою. Тому той завжди повертався додому з порожніми руками. Якось замучений чорними думками Шенборн зустрів у лісі ворожку. Та порадила йому розпрощатися із своїми підозрами. Графиня повинна була спуститися з небезпечних та стрімких Соколових скель. Якщо вона пройде шлях благополучно, значить - вірна, якщо зірветься, то зраджує. Дружина Шенборна благополучно спустилася зі скелі, але розлючена чоловіковою поведінкою залишила його назавжди. Після смерті графині її душа оселилася в замку і час від часу дає про себе чути. За словами відвідувачів, у старій частині замку живе привид чоловіка, щоправда він мирний та тихий. З вигляду дуже схожий на одного із Шенборнів, зображених на одній із картин, що висить в замку." wrappingWidth="911.7367706298828">
@@ -39,7 +39,7 @@
                                         </Text>
                                         <ImageView fitHeight="359.0" fitWidth="264.0" layoutX="599.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Палац%20Шенборнів_2.jpg" />
+                                                <Image url="@img/Палац%20Шенборнів_2.jpg" />
                                             </image>
                                         </ImageView>
                                     </children>
@@ -65,7 +65,7 @@
                                     <children>
                                         <ImageView fitHeight="301.0" fitWidth="539.0" layoutX="364.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Палац%20Шенборнів_3.jpg" />
+                                                <Image url="@img/Палац%20Шенборнів_3.jpg" />
                                             </image>
                                         </ImageView>
                                         <Text layoutX="28.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Палац розташований в самісінькому центрі великого парку, загальною площею в 19 га. &#10;2. Берегвар оздоблений барельєфами на тему геральдичних символів роду Шенборнів, вітражами, флюгерами.&#10;3. Палац є пам’яткою архітектури національного значення." wrappingWidth="298.40012207031265">
