--- a/src/main/resources/com/example/cursova/Waterfall.fxml
+++ b/src/main/resources/com/example/cursova/Waterfall.fxml
@@ -5,43 +5,38 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
 <AnchorPane prefHeight="790.0" prefWidth="1550.0" style="-fx-background-color: BFD8AF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Waterfall">
     <children>
         <AnchorPane layoutY="93.0" prefHeight="700.0" prefWidth="1550.0" style="-fx-background-color: white;">
             <children>
-                <ImageView fitHeight="327.0" fitWidth="490.0" layoutX="39.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="imageView1" fitHeight="327.0" fitWidth="490.0" layoutX="41.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@img/Шипіт.jpg" />
+                        <Image url="@../../../img/Долина%20нарцисів.jpg" />
                     </image>
                 </ImageView>
-                <TabPane layoutX="588.0" prefHeight="700.0" prefWidth="962.0" tabClosingPolicy="UNAVAILABLE">
+                <TabPane layoutX="588.0" prefHeight="700.0" prefWidth="965.0" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
                         <Tab text="Легенда виникнення">
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <ImageView fitHeight="407.0" fitWidth="492.0" layoutX="25.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="imageView2" fitHeight="316.0" fitWidth="465.0" layoutX="265.0" layoutY="324.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@img/Шипіт_1.jpg" />
+                                                <Image url="@../../../img/Шипіт_1.jpg" />
                                             </image>
                                         </ImageView>
-                                        <Text layoutX="25.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Легенда каже, що колись у селі Пилипець жили дівчина Марійка – із заможної родини та її коханий Іван – із бідної. Родина дівчини була проти зустрічей з хлопцем та заборонила їм бачитись. Але закохані не зважали на це і почали таємно бачитись на горі Високий Верх. Пізніше мати Марійки дізналась про це, прийшла на місце їх зустрічі та почала сипати прокльони. Через це почалася злива з громом і потоки, що сходили з гір, забрали молоду пару у прірву. На тому місці і виник водоспад. Після того мати постійно приходила на це місце і одного разу почула голос доньки, яка шепотіла слова кохання Івану. Так і виникла назва Шипіт.&#10;Також є версія, що найменування водоспаду походить від слова «шепіт», бо звук спадаючої води нагадує шепотіння." wrappingWidth="911.7367706298828">
-                                            <font>
-                                                <Font name="Comic Sans MS" size="18.0" />
-                                            </font>
-                                        </Text>
-                                        <ImageView fitHeight="397.0" fitWidth="329.0" layoutX="565.0" layoutY="256.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@img/Шипіт_2.jpeg" />
-                                            </image>
-                                        </ImageView>
+                              <TextArea fx:id="textArea" blendMode="HARD_LIGHT" layoutX="10.0" layoutY="14.0" maxWidth="943.0" minHeight="299.0" minWidth="939.0" prefHeight="299.0" prefWidth="939.0" style="-fx-focus-color: -fx-control-inner-background; -fx-text-fill: black; -fx-faint-focus-color: transparent;" wrapText="true">
+                                 <font>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                 </font>
+                              </TextArea>
                                     </children>
                                 </AnchorPane>
                             </content>
@@ -50,12 +45,12 @@
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <Text layoutX="25.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Біля підніжжя гори Гемби, серед північних схилів полонини Боржави, сховався величний водоспад Шипіт (або Шипот) – найповноводніший в Українських Карпатах. Коли їдете на авто треба звернути з траси у Пилипці і проїхати селом близько 6 кілометрів на захід, а автобусом можна з Воловця (де є залізнична станція) в напрямку Міжгір’я зупиняються на автостанції «Воловець-2», на вулиці Карпатській. Якщо далі збираєтесь іти пішки, попросіть водія зупинити у Подобовці. Звідти шлях до водоспаду пролягає через гірку, але дорога коротша, ніж із центру Пилипця.    &#10;&#10;Верхньої межі ціни не існує. За прохід до водоспаду добродушний охоронець вимагатиме з вас аж 7 грн, що в нинішніх умовах дешевше, ніж даром." wrappingWidth="445.39630126953125">
-                                            <font>
-                                                <Font name="Comic Sans MS" size="18.0" />
-                                            </font>
-                                        </Text>
-                                        <WebView fx:id="webView" layoutX="492.0" layoutY="65.0" prefHeight="490.0" prefWidth="434.0" />
+                                        <WebView fx:id="webView" layoutX="492.0" layoutY="65.0" prefHeight="550.0" prefWidth="440.0" />
+                              <TextArea fx:id="textArea2" blendMode="HARD_LIGHT" layoutX="14.0" layoutY="83.0" maxWidth="482.0" minHeight="514.0" minWidth="475.0" prefHeight="531.0" prefWidth="475.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                                 <font>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                 </font>
+                              </TextArea>
                                     </children></AnchorPane>
                             </content>
                         </Tab>
@@ -63,32 +58,32 @@
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <ImageView fitHeight="338.0" fitWidth="468.0" layoutX="449.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="imageView3" fitHeight="338.0" fitWidth="468.0" layoutX="465.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@img/Шипіт_3.jpg" />
+                                                <Image url="@../../../img/Шипіт_2.jpg" />
                                             </image>
                                         </ImageView>
-                                        <Text layoutX="28.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Висота водоспаду 14 метрів.&#10;2. В Карпатах є три водоспада з назвою Шипіт. Але найпопулярніший знаходиться біля селища Пилипець.&#10;3. Водоспад народжується з підземного джерела, що має назву “морське око”.&#10;4. Коли водоспад повноводний, то його шум чути за декілька сотень метрів.&#10;5. Кількість каскадів різної висоти – 5.&#10;6. Відстань до найближчого швидкісного бугельного підйомника – 300 метрів (працює цілий рік)." wrappingWidth="408.0001586914064">
-                                            <font>
-                                                <Font name="Comic Sans MS" size="18.0" />
-                                            </font>
-                                        </Text>
-                                        <Text layoutX="28.0" layoutY="439.0" strokeType="OUTSIDE" strokeWidth="0.0" text="6. Біля водоспаду Шипіт розгортаються події роману відомого українського письменника Любка Дереша  «Трохи пітьми».&#10;7. Із 1993 року, з ініціативи ужгородських хіпі, на галявині над водоспадом щороку відбувається фестиваль субкультур «Шипот».&#10;8. Найбільше туристів тут під час святкування свята Івана Купала з 6 на 7 липня.&#10;9. Взимку води потоку не замерзають повністю, завдяки чому очам постає дивовижне видовище, коли кришталевий потік води зривається зі скелі." wrappingWidth="905.1771850585938">
-                                            <font>
-                                                <Font name="Comic Sans MS" size="18.0" />
-                                            </font>
-                                        </Text>
+                              <TextArea fx:id="textArea3" blendMode="HARD_LIGHT" layoutX="8.0" layoutY="40.0" maxWidth="473.0" minHeight="314.0" minWidth="441.0" prefHeight="345.0" prefWidth="450.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                                 <font>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                 </font>
+                              </TextArea>
+                              <TextArea fx:id="textArea4" blendMode="HARD_LIGHT" layoutX="15.0" layoutY="394.0" maxWidth="942.0" minHeight="247.0" minWidth="934.0" prefHeight="254.0" prefWidth="934.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                                 <font>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                 </font>
+                              </TextArea>
                                     </children></AnchorPane>
                             </content>
                         </Tab>
                     </tabs>
                 </TabPane>
-                <Separator layoutX="562.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="22.0" />
-                <Text layoutX="39.0" layoutY="418.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Водоспад Шипіт знаходиться в одному з найбільш мальовничих районів Закарпаття – недалеко від села Пилипець. Він вражає своєю величчю, могутністю і містичною красою. &#10;&#10;Щоб дізнатись про нього більше обирай вкладку, яка тебе зацікавила -&gt;" wrappingWidth="490.0">
-                    <font>
-                        <Font name="Comic Sans MS" size="20.0" />
-                    </font>
-                </Text>
+                <Separator halignment="LEFT" layoutX="575.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="22.0" />
+            <TextArea fx:id="textArea5" blendMode="HARD_LIGHT" layoutX="28.0" layoutY="394.0" maxWidth="515.0" minHeight="262.0" minWidth="515.0" prefHeight="262.0" prefWidth="515.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="18.0" />
+               </font>
+            </TextArea>
             </children>
         </AnchorPane>
         <Label layoutX="537.0" text="Водоспад Шипіт" textFill="#294b29">
@@ -96,10 +91,15 @@
                 <Font name="Comic Sans MS" size="60.0" />
             </font>
         </Label>
-        <Button fx:id="Btn_return" layoutX="37.0" layoutY="23.0" mnemonicParsing="false" text="Повернутись">
+        <Button fx:id="Btn_return" layoutX="37.0" layoutY="31.0" mnemonicParsing="false" text="Повернутись">
             <font>
                 <Font name="Comic Sans MS" size="18.0" />
             </font>
         </Button>
+      <Button fx:id="saveButton" layoutX="1401.0" layoutY="31.0" mnemonicParsing="false" onAction="#saveButtonClicked" text="Зберегти">
+         <font>
+            <Font name="Comic Sans MS" size="18.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
